--- a/cloudsim-plus-benchmarks/pom.xml
+++ b/cloudsim-plus-benchmarks/pom.xml
@@ -45,7 +45,7 @@ THE POSSIBILITY OF SUCH DAMAGE.
     <licenses>
         <license>
             <name>GPLv3</name>
-            <url>http://www.gnu.org/licenses/lgpl-3.0.txt</url>
+            <url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
         </license>
     </licenses>
 
