--- a/cloudsim-plus/pom.xml
+++ b/cloudsim-plus/pom.xml
@@ -475,6 +475,11 @@
             <version>3.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.0</version>
+        </dependency>
     </dependencies>
 
     <reporting>
