Update pom.xml files to avoid error when trying to execute "mvn deploy" from the root directory. Added configuration to all modules which must not be deployed to be ignored during the deploy if the command is executed from the root directory.
Executing "mvn deploy" from the cloudsim-plus dir is faster,
since this is the only module to be deployed.

--- a/cloudsim-plus-examples/pom.xml
+++ b/cloudsim-plus-examples/pom.xml
@@ -53,7 +53,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!-- Directory where is the license file to be used by the com.mycila.maven-license-plugin -->
         <license.dir>..</license.dir>
-        <version>1.2.0</version>
     </properties>
 
     <build>
@@ -130,6 +129,15 @@
                         <exclude>**/src/main/resources/**</exclude>
                         <exclude>**/src/main/java/org/cloudbus/**</exclude>
                     </excludes>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.2</version>
+                <configuration>
+                    <skip>true</skip>
                 </configuration>
             </plugin>
         </plugins>
