--- a/pom.xml
+++ b/pom.xml
@@ -59,4 +59,28 @@
 		<module>cloudsim-plus-benchmarks</module>
 		<module>cloudsim-plus-testbeds</module>
     </modules>
+
+    <build>
+        <plugins>
+            <plugin>
+                <!-- The only module that can be deployed to Maven Central is the cloudsim-plus one.
+                 It's the only one that have all the configuration to execute the deploy.
+                 However, when the "mvn deploy" command executed from the root directory,
+                 it's generated an error when trying to deploy the parent project.
+                 To avoid that, this configuration is used to ignore the deployment of the parent.
+                 All the other modules also have the same configuration to avoid them to be
+                 deployed.
+
+                 However, executing "mvn deploy" from the cloudsim-plus directory
+                 is faster.
+                 -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.2</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
