--- a/cloudsim-plus-benchmarks/pom.xml
+++ b/cloudsim-plus-benchmarks/pom.xml
@@ -173,6 +173,10 @@ THE POSSIBILITY OF SUCH DAMAGE.
                     <header>${license.dir}/COPYRIGHT</header>
                     <strictCheck>true</strictCheck>
                     <failIfMissing>false</failIfMissing>
+                    <excludes>
+                        <exclude>**/src/main/resources/**</exclude>
+                        <exclude>**/*.md</exclude>
+                    </excludes>
                 </configuration>
             </plugin>
 
