--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <version>1.2.2</version>
     <packaging>pom</packaging>
 
-    <name>CloudSim Plus Modules: API, Examples, Testbeds, Benchmarks</name>
+    <name>CloudSim Plus Modules (All)</name>
     <description>CloudSim Plus: A modern, highly extensible and easier-to-use Java 8 Framework for Modeling and Simulation of Cloud Computing Infrastructures and Services</description>
     <url>http://cloudsimplus.org</url>
 
@@ -81,6 +81,41 @@
                     <skip>true</skip>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <!-- Added the plugin to the parent project just to enable
+                calling "mvn license:format" from the root directory
+                and not generating an error because the parent doesn't
+                have such a plugin enabled.
+
+                The cloudsim-plus module is not inheriting form the parent,
+                despite it's included as a module, because
+                it is an independent module.
+                And to deploy it alone to maven central, it can't inherit
+                a parent pom.xml (because if the parent is not deployed, the
+                parent pom will be missing for the cloudsim-plus module).
+
+                However, the other modules would inherit from
+                the parent pom again.
+                This can be done in the future.
+                -->
+                <groupId>com.mycila.maven-license-plugin</groupId>
+                <artifactId>maven-license-plugin</artifactId>
+                <version>1.10.b1</version>
+                <configuration>
+                    <header>COPYRIGHT</header>
+                    <mapping>
+                        <java>SLASHSTAR_STYLE</java>
+                    </mapping>
+
+                    <strictCheck>true</strictCheck>
+                    <failIfMissing>false</failIfMissing>
+                    <excludes>
+                        <exclude>**/*</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 </project>
