--- a/cloudsim-plus/pom.xml
+++ b/cloudsim-plus/pom.xml
@@ -151,7 +151,7 @@
                         </executions>
 
                         <configuration>
-                            <!-- <failOnError>false</failOnError> -->
+
                             <tags>
                                 <direction>
                                     <name>pre</name>
@@ -240,7 +240,9 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
                     <version>3.0.0</version>
+
                     <configuration>
+                        <failOnError>false</failOnError>
                         <!-- Switch OFF the doclint in Java 8 -->
                         <additionalparam>-Xdoclint:none</additionalparam>
                     </configuration>
