--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,6 @@ jdk:
   - oraclejdk8 
 after_script:
     - cd cloudsim-plus && mvn jacoco:report; cd ..
-    - curl http://www.jpm4j.org/install/script -k > jpmInstall.sh
-    - sudo sh jpmInstall.sh
-    - sudo jpm install com.codacy:codacy-coverage-reporter:assembly
+    - curl -L https://oss.sonatype.org/service/local/repositories/releases/content/com/codacy/codacy-coverage-reporter/4.0.0/codacy-coverage-reporter-4.0.0-assembly.jar > codacy.jar
     #Upload the coverage report to codacy.com. It requires the CODACY_PROJECT_TOKEN environment variable
-    - codacy-coverage-reporter -l Java -r cloudsim-plus/target/site/jacoco/jacoco.xml
+    - java -jar codacy.jar report -l Java -r cloudsim-plus/target/site/jacoco/jacoco.xml
