Removes the mycila license subplugin that extracts copyright years from file change dates in git repository.
- The plugins doesn't work when CloudSim Plus is downloaded as a zip
  (which doesn't include any git history)
- Included plugins versions in reporting tag
- Changed the way to check required maven version inside the pom.xml
  for the benchmarks project (for compliance with maven 3.0)

Signed-off-by: Manoel Campos <manoelcampos@gmail.com>

--- a/cloudsim-plus/pom.xml
+++ b/cloudsim-plus/pom.xml
@@ -411,13 +411,6 @@
                         <phase>process-sources</phase>
                     </execution>
                 </executions>
-                <dependencies>
-                    <dependency>
-                        <groupId>com.mycila</groupId>
-                        <artifactId>license-maven-plugin-git</artifactId>
-                        <version>${license-maven-plugin.version}</version>
-                    </dependency>
-                </dependencies>
             </plugin>
         </plugins>
     </build>
@@ -478,6 +471,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.0.0</version>
                 <reportSets>
                     <!-- https://maven.apache.org/plugins/maven-javadoc-plugin/examples/javadoc-nofork.html -->
                     <reportSet>
