--- a/cloudsim-plus-benchmarks/pom.xml
+++ b/cloudsim-plus-benchmarks/pom.xml
@@ -1,28 +1,3 @@
-<!--
-
-    CloudSim Plus: A modern, highly-extensible and easier-to-use Framework for
-    Modeling and Simulation of Cloud Computing Infrastructures and Services.
-    http://cloudsimplus.org
-
-        Copyright (C) ${license.git.copyrightYears} Universidade da Beira Interior (UBI, Portugal) and
-        the Instituto Federal de Educação Ciência e Tecnologia do Tocantins (IFTO, Brazil).
-
-        This file is part of CloudSim Plus.
-
-        CloudSim Plus is free software: you can redistribute it and/or modify
-        it under the terms of the GNU General Public License as published by
-        the Free Software Foundation, either version 3 of the License, or
-        (at your option) any later version.
-
-        CloudSim Plus is distributed in the hope that it will be useful,
-        but WITHOUT ANY WARRANTY; without even the implied warranty of
-        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-        GNU General Public License for more details.
-
-        You should have received a copy of the GNU General Public License
-        along with CloudSim Plus. If not, see <http://www.gnu.org/licenses/>.
-
--->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -68,10 +43,6 @@
         <url>http://github.com/manoelcampos/cloudsim-plus/issues</url>
         <system>GitHub Issues</system>
     </issueManagement>
-
-    <prerequisites>
-        <maven>3.0</maven>
-    </prerequisites>
 
     <dependencies>
         <dependency>
@@ -174,6 +145,7 @@
                     <excludes>
                         <exclude>**/src/main/resources/**</exclude>
                         <exclude>**/*.md</exclude>
+                        <exclude>**/*.xml</exclude>
                         <exclude>**/package-info.java</exclude>
                     </excludes>
                 </configuration>
@@ -187,6 +159,31 @@
                 <configuration>
                     <skip>true</skip>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <!-- Checks if a required Maven version is being used to build the project -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <version>3.0.0-M1</version>
+                <executions>
+                    <execution>
+                        <id>enforce-versions</id>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <requireMavenVersion>
+                                    <version>3.0.0</version>
+                                </requireMavenVersion>
+                                <requireJavaVersion>
+                                    <version>1.8</version>
+                                </requireJavaVersion>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
