--- a/cloudsim-plus-testbeds/pom.xml
+++ b/cloudsim-plus-testbeds/pom.xml
@@ -1,29 +1,4 @@
 <?xml version="1.0"?>
-<!--
-
-    CloudSim Plus: A modern, highly-extensible and easier-to-use Framework for
-    Modeling and Simulation of Cloud Computing Infrastructures and Services.
-    http://cloudsimplus.org
-
-        Copyright (C) 2016-2018 Universidade da Beira Interior (UBI, Portugal) and
-        the Instituto Federal de Educação Ciência e Tecnologia do Tocantins (IFTO, Brazil).
-
-        This file is part of CloudSim Plus.
-
-        CloudSim Plus is free software: you can redistribute it and/or modify
-        it under the terms of the GNU General Public License as published by
-        the Free Software Foundation, either version 3 of the License, or
-        (at your option) any later version.
-
-        CloudSim Plus is distributed in the hope that it will be useful,
-        but WITHOUT ANY WARRANTY; without even the implied warranty of
-        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-        GNU General Public License for more details.
-
-        You should have received a copy of the GNU General Public License
-        along with CloudSim Plus. If not, see <http://www.gnu.org/licenses/>.
-
--->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
@@ -140,15 +115,9 @@
                     <excludes>
                         <exclude>**/src/main/resources/**</exclude>
                         <exclude>**/*.md</exclude>
+                        <exclude>**/*.xml</exclude>
                     </excludes>
                 </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>com.mycila</groupId>
-                        <artifactId>license-maven-plugin-git</artifactId>
-                        <version>${license-maven-plugin.version}</version>
-                    </dependency>
-                </dependencies>
             </plugin>
 
             <plugin>
