Refactor DatacenterSimple and DatacenterStorage
- Improves documentation
- Introduces new DatacenterSimple constructors to avoid code duplication
  and enable creating a Datacenter by providing a storage list or
  a DatacenterStorage instance.
- Introduces a DatacenterStorage constructor to enable instantiating
  the class by providing a storage list.
- Updates StorageAreaNetworkExample1 to use the new DatacenterSimple
  constructor to provide a storage list, instead of using
  the datacenter.getDatacenterStorage().setStorageList(list)
  (which is too long).

Signed-off-by: Manoel Campos <manoelcampos@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
-install: mvn clean install -B -V -Dintegration-tests=true
+install: mvn clean install -B -V -Pintegration-tests
 script:
-  - cd cloudsim-plus && mvn clean test -Dintegration-tests=true jacoco:report; cd ..
+  - cd cloudsim-plus && mvn clean test -Pintegration-tests jacoco:report; cd ..
 cache:
   directories:
   - $HOME/.m2
