--- a/cloudsim-plus/pom.xml
+++ b/cloudsim-plus/pom.xml
@@ -2,9 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.cloudsimplus</groupId>
+    <parent>
+        <groupId>org.cloudsimplus</groupId>
+        <artifactId>cloudsim-plus-modules</artifactId>
+        <version>dev</version>
+    </parent>
+
     <artifactId>cloudsim-plus</artifactId>
-    <version>4.4.1</version>
+    <version>${global.version}</version>
+
     <name>CloudSim Plus API</name>
     <description>CloudSim Plus: A modern, highly extensible and easier-to-use Java 8+ Framework for Modeling and Simulation of Cloud Computing Infrastructures and Services</description>
     <url>http://cloudsimplus.org</url>
