== Introduces new methods to Vm:
- The Vm.getHostCpuUtilization() methods
  enable computing the relative VM CPU utilization
  from the Host.
  That is different from the same methods
  in VmUtilizationHistory since the former just works
  during simulation execution,
  while the latter uses the history to compute the utilization.
- Vm.getHostRamUtilization() and Vm.getHostBwUtilization()
  provide the same feature for RAM and BW.

== Renames following methods in Host and Vm to provide uniformity:

- Host.getUtilizationOfCpu to getCpuPercentUtilization
- Host.getUtilizationOfCpuMips to getCpuMipsUtilization
- Host.getUtilizationOfBw to getBwUtilization
- Host.getUtilizationOfRam to getRamUtilization
- Vm.getCpuPercentUsage to getCpuPercentUtilization
- Vm.getTotalCpuMipsUsage to getTotalCpuMipsUtilization

== New Example

- Adds the VmRelativeHostResourceUtilization to show the relative
  percentage of each resource every VM is using from its Host.

Signed-off-by: Manoel Campos <manoelcampos@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,6 @@
-.flattened-pom.xml
-.DS_Store
-/docs/_build
-/cloudsim-plus/target/
-/cloudsim-plus-examples/target/
-/cloudsim-plus-benchmarks/target/
-/cloudsim-plus-testbeds/target/
-/cloudsim-plus/nbproject/
-/distribution/target/
-/target/
-dependency-reduced-pom.xml
-/cloudsim-plus-examples/output/
+target/
+output/
+
 #Ignore IntelliJ IDEA project files
 .idea/
 *.uml
@@ -29,7 +20,13 @@ nbproject/
 
 #Documentation
 docs/presentation/node_modules/
+/docs/_build
 
+dependency-reduced-pom.xml
+.flattened-pom.xml
+Teste.java
+Test.java
+.DS_Store
 *.jar
 *.~lock*
 ~$*
