--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ cache:
   directories:
   - $HOME/.m2
 jdk:
-  - oraclejdk8 
+  - openjdk8
 after_script:
     - cd cloudsim-plus && mvn jacoco:report; cd ..
     - curl -L https://oss.sonatype.org/service/local/repositories/releases/content/com/codacy/codacy-coverage-reporter/4.0.0/codacy-coverage-reporter-4.0.0-assembly.jar > codacy.jar
