--- a/cloudsim-plus/pom.xml
+++ b/cloudsim-plus/pom.xml
@@ -452,6 +452,11 @@
             <version>3.8.1</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.1</version>
+        </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
