Small refactoring and improvements
- Adds default Pe MIPS capacity as 1000,
  introducing no-args constructor that creates
  a PE with that capacity.
- Adds new Conversion methods: megaToGiga() and megaToTera()
- Adds VmGroup constructor that accepts the timezone as parameter.
  This way, the broker can try to place the entire VmGroup
  into the closest datacenter.
- Adds VmGroup.size() method to return the number of VMs into the group.

Signed-off-by: Manoel Campos <manoelcampos@gmail.com>

--- a/cloudsim-plus-examples/pom.xml
+++ b/cloudsim-plus-examples/pom.xml
@@ -96,8 +96,8 @@
 				</configuration>
 			</plugin>
 
-            <!-- Creates a "uber jar" that includes all external dependencies
-            inside it. By this way, the jar can be run directly in any
+            <!-- Creates an "uber jar" that includes all external dependencies
+            inside it. This way, the jar can be run directly in any
             computer with a regular JVM installed. -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
