Set theme jekyll-theme-architect

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: "CloudSim Plus"
 description: "A modern, full-featured, highly extensible and easier-to-use Java 8+ Framework for Modeling and Simulation of Cloud Computing Infrastructures and Services" 
 google_analytics: 
 show_downloads: true
-theme: jekyll-theme-modernist
+theme: jekyll-theme-architect
 encoding: utf-8
 
 gems:
