Reverts sonatype config that was avoiding CloudSim Plus artfact to be deployed to Maven Central.
Signed-off-by: Manoel Campos <manoelcampos@gmail.com>

--- a/cloudsim-plus/pom.xml
+++ b/cloudsim-plus/pom.xml
@@ -239,8 +239,7 @@
                             <serverId>ossrh</serverId>
                             <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                             <!--If the artifact will be automatically released to maven central after the upload to sonatype.-->
-                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
-                            <autoDropAfterRelease>true</autoDropAfterRelease>
+                            <autoReleaseAfterClose>false</autoReleaseAfterClose>
                         </configuration>
                     </plugin>
                 </plugins>
