Adds config to deploy to GitHub Packages
Signed-off-by: Manoel Campos <manoelcampos@gmail.com>

--- a/cloudsim-plus/pom.xml
+++ b/cloudsim-plus/pom.xml
@@ -150,13 +150,30 @@
             <!--
              A profile used to execute all goals required to deploy
              the project to the Maven Central.
-             To execute use: mvn clean deploy -P all
+             To execute use: mvn clean deploy -P sonatype
 
              To check the deployed artifact and probably release it to maven central
              you should visit https://oss.sonatype.org.
              MAKE SURE YOU ARE LOGGED IN TO SEE YOUR DEPLOYMENTS.
              -->
-            <id>all</id>
+            <id>sonatype</id>
+
+            <!--
+            URLs to deploy the project at the Maven Central (http://mvnrepository.com)
+            using a Sonatype account (http://central.sonatype.org)
+            See the "all" profile in this pom for deployment information.
+            -->
+            <distributionManagement>
+                <snapshotRepository>
+                    <id>ossrh</id>
+                    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+                </snapshotRepository>
+                <repository>
+                    <id>ossrh</id>
+                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+                </repository>
+            </distributionManagement>
+
             <build>
                 <plugins>
                     <plugin>
@@ -245,23 +262,23 @@
                 </plugins>
             </build>
         </profile>
-    </profiles>
 
-    <!--
-     URLs to deploy the project at the Maven Central (http://mvnrepository.com)
-     using a Sonatype account (http://central.sonatype.org)
-     See the "all" profile in this pom for deployment information.
-    -->
-    <distributionManagement>
-        <snapshotRepository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
-        <repository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-        </repository>
-    </distributionManagement>
+        <profile>
+            <!--
+            A profile used to deploy the project to GitHub Packages.
+            To execute use: mvn clean deploy -P github
+            -->
+            <id>github</id>
+
+            <distributionManagement>
+                <repository>
+                    <id>github</id>
+                    <name>GitHub manoelcampos Apache Maven Packages</name>
+                    <url>https://maven.pkg.github.com/manoelcampos/cloudsim-plus</url>
+                </repository>
+            </distributionManagement>
+        </profile>
+    </profiles>
 
     <build>
         <pluginManagement>
